# PCB_defect_detection

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: yolo_8m_gpu.yml  yolo_8n_cpu.yml  yolo_8n_gpu.yml  yolo_config.py
notebooks/: dev.py  dev_train.py  yolo_predict.py  yolo_preprocess.py  yolo_train.py  yolo_train_cv.py  yolo_train_results.py
src/pcb/: utils.py
src/pcb/model/: train_yolo.py  utils.py
src/pcb/process/: load.py  preprocess.py
src/pcb/visualizations/: annotations.py  results.py
src/scripts/: yolo_inference.py  yolo_predict.py  yolo_preprocess.py  yolo_train.py  yolo_train_cv.py  yolo_train_results.py
